smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/missing-newline-after-assignment.smithy
// Syntax error at line 6, column 24: Expected a line break, but found IDENTIFIER('baz') | Model
$version: "2.0"
namespace com.foo

structure Foo {
    bar: String = "Hi" baz: String = "Hi"
}
